--- a/style.css
+++ b/style.css
@@ -1,54 +1,55 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
 
-body{
-    background: #454545;
-    color: #fff;
+body {
+  background: #1a1717;
+  color: #fff;
 }
 
-.container{
-    width: 100%;
-    height: 100vh;
-    padding: 20px;
-    display: flex;
+.container {
+  width: 100%;
+  height: 100vh;
+  padding: 20px;
+  display: flex;
 }
 
-.left, .right{
-    flex-basis: 50%;
-    padding: 10px;
+.left,
+.right {
+  flex-basis: 50%;
+  padding: 10px;
 }
 
-textarea{
-    width: 100%;
-    height: 28%;
-    background: #1f1f1f;
-    color: #fff;
-    padding: 10px 20px;
-    border: 0;
-    outline: 0;
-    font-size: 18px;
+textarea {
+  width: 100%;
+  height: 28%;
+  background: #8f8abe;
+  color: #fff;
+  padding: 10px 20px;
+  border: 0;
+  outline: 0;
+  font-size: 18px;
 }
 
-iframe{
-    width: 100%;
-    height: 96%;
-    background: #fff;
-    border: 0;
-    outline: 0;
+iframe {
+  width: 100%;
+  height: 96%;
+  background: #ede9ee;
+  border: 0;
+  outline: 0;
 }
 
-label i{
-    margin-right: 10px;
-    margin-left: 10px;
+label i {
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
-label{
-    display: flex;
-    align-items: center;
-    background: #000;
-    height: 30px;
+label {
+  display: flex;
+  align-items: center;
+  background: #000;
+  height: 30px;
 }
